--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@ changefreq: daily
     <div class="max-w-7xl mx-auto text-center md:text-left fade-in-up">
         <div class="grid md:grid-cols-2 gap-8 my-12">
             <div>
-                <div class="aspect-video"><iframe src="https://www.youtube.com/embed/Iec9LRfR1XU?controls=1&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" class="rounded-lg shadow-lg w-full h-full"></iframe></div>
+                <div class="aspect-video"><iframe src="https://www.youtube.com/embed/BDh9SwrrF30?controls=1&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" class="rounded-lg shadow-lg w-full h-full"></iframe></div>
             </div>
             <div>
-                <div class="aspect-video"><iframe src="https://www.youtube.com/embed/BDh9SwrrF30?controls=1&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" class="rounded-lg shadow-lg w-full h-full"></iframe></div>
+                <div class="aspect-video"><iframe src="https://www.youtube.com/embed/YW_qxaV15R8?controls=1&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" class="rounded-lg shadow-lg w-full h-full"></iframe></div>
             </div>
         </div>
     </div>
