--- a/instruments.html
+++ b/instruments.html
@@ -7,11 +7,6 @@ sitemap:
 ---
 
 <style>
-    /* Ensure content starts below the fixed nav */
-    .content-container {
-        padding-top: 120px; /* Adjust based on main nav height */
-    }
-
     .product-nav {
         position: sticky;
         top: 100px; /* Adjust to be below main nav */
@@ -29,45 +24,54 @@ sitemap:
 
     .product-nav-item img {
         filter: grayscale(80%) brightness(0.7);
-        transition: filter 0.3s ease;
+        transition: filter 0.3s ease, transform 0.3s ease;
     }
 
     .product-nav-item:hover img {
         filter: grayscale(40%) brightness(0.9);
     }
-
-    #product-display-container {
-        transition: opacity 0.5s ease-in-out;
-    }
-
-    .product-image-carousel .carousel-image {
-        display: none;
-    }
-
-    .product-image-carousel .carousel-image.active {
-        display: block;
-    }
 </style>
 
-<div class="content-container">
-    <!-- Product Navigation Bar -->
-    <nav class="product-nav bg-black/60 backdrop-blur-xl border-b border-t border-white/10 py-4 mb-12">
-        <div class="max-w-7xl mx-auto px-6">
-            <div id="product-nav-container" class="flex justify-center items-center gap-4 md:gap-6 overflow-x-auto">
-                {% for product in site.data.products %}
-                <a href="#{{ product.id }}"
-                   class="product-nav-item p-1 rounded-md border-2 border-transparent transition-all duration-300"
-                   data-product-id="{{ product.id }}"
-                   onclick="selectProduct('{{ product.id }}', event)">
-                    <img src="{{ product.images[0] | replace: '//', '/' }}.png" alt="{{ product.name }}" class="h-12 w-12 md:h-16 md:w-16 object-contain">
-                </a>
+<div class="pt-32">
+    {% include product_nav.html %}
+
+    <section id="products" class="py-12 md:py-16 px-4 md:px-6 relative z-10">
+        <div class="max-w-7xl mx-auto">
+            <div class="flex flex-col md:flex-row justify-between items-end mb-12 gap-8 fade-in-up">
+                <div class="w-full md:w-auto">
+                    <h2 class="text-4xl md:text-5xl font-display font-bold mb-4">The Instruments</h2>
+                    <p class="text-text-muted max-w-lg text-sm md:text-base">A breakdown of what each instrument can do...</p>
+                </div>
+                <div class="flex flex-wrap gap-2 w-full md:w-auto">
+                    <button onclick="renderProducts('all')" class="filter-btn active flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all bg-white text-void">All</button>
+                    <button onclick="renderProducts('Fuzz')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Fuzz</button>
+                    <button onclick="renderProducts('Modulation')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Modulation</button>
+                    <button onclick="renderProducts('Time')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Time</button>
+                    <button onclick="renderProducts('Noise')" class="filter-btn flex-1 md:flex-none text-center px-4 py-2 rounded-full border border-white/10 text-[10px] font-bold uppercase tracking-widest hover:bg-white hover:text-void transition-all text-text-muted">Noise</button>
+                </div>
+            </div>
+            <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                {% for p in site.data.products %}
+                <div class="group relative card-glass rounded-lg overflow-hidden transition-all duration-500 hover:shadow-2xl hover:shadow-brand-gold/10 fade-in-up" style="transition-delay: {{ forloop.index0 | times: 50 }}ms" data-category="{{ p.category }}">
+                    <a href="/instruments/{{ p.name | slugify }}/" class="relative aspect-square p-8 bg-gradient-to-br from-white/5 to-transparent flex items-center justify-center cursor-pointer overflow-hidden">
+                        <picture>
+                            <source srcset="{{ p.images[0] | remove: '.png' }}.webp" type="image/webp">
+                            <source srcset="{{ p.images[0] }}.png" type="image/png">
+                            <img src="{{ p.images[0] }}.png" class="w-full h-full object-contain drop-shadow-xl transition-transform duration-500 group-hover:scale-110 group-hover:-rotate-3 relative z-10" alt="{{ p.name }}" loading="lazy" onerror="this.src='assets/placeholder.png'">
+                        </picture>
+                        <div class="absolute inset-0 bg-brand-gold/10 filter blur-3xl opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                    </a>
+                    <div class="p-6">
+                        <div class="flex justify-between items-start mb-2">
+                            <div>
+                                <h3 class="text-xl font-display font-bold text-white"><a href="/instruments/{{ p.name | slugify }}/" class="group-hover:text-brand-gold transition-colors">{{ p.name }}</a></h3>
+                                <p class="text-[10px] font-bold text-text-muted uppercase tracking-wider">{{ p.subtitle }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 {% endfor %}
             </div>
         </div>
-    </nav>
-
-    <!-- Product Display Section -->
-    <main id="product-display-container" class="max-w-7xl mx-auto px-6 pb-24 md:pb-32">
-        <!-- Product content will be injected here -->
-    </main>
+    </section>
 </div>
